[package]
name = "vers"
version = "0.3.0"
edition = "2021"
description = "Install and manage dev tools with multiple environments"
repository = "https://github.com/reynn/vers"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]

[package.metadata.bundle]
name = "vers"
identifier = "dev.reynn.vers"

[profile.release]
lto = true
incremental = true
opt-level = 3

[profile.dev]
incremental = true

[dependencies]
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "2.0"
clap_complete = "4.0"
directories-next = "2.0"
env_logger = "0.9"
eyre = "0.6"
indicatif = "0.17.0"
is_executable = "1.0"
log = "0.4"
octocrab = "0.17"
once_cell = "1.14"
regex = "1.6"
reqwest = "0.11"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skim = "0.9"
tabled = "0.8"
test-case = "2.2"
tokio = { version = "1.21", features = ["full"] }
toml = "0.5"
walkdir = "2.3"
