[package]
name = "vers"
version = "0.6.0"
edition = "2021"
description = "Install and manage dev tools with multiple environments"
repository = "https://github.com/reynn/vers"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]

[package.metadata.bundle]
name = "vers"
identifier = "dev.reynn.vers"

[profile.release]
lto = true
incremental = true
opt-level = 3

[profile.dev]
incremental = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
clap = { version = "4.3", features = ["derive"] }
clap-verbosity-flag = "2.0"
clap_complete = "4.3"
directories-next = "2.0"
indicatif = "0.17"
is_executable = "1.0"
octocrab = "0.28"
once_cell = "1.18"
regex = "1.8"
reqwest = "0.11"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skim = "0.10"
tabled = "0.12"
test-case = "3.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.7"
walkdir = "2.3"
tar = "0.4"
zip = "0.6"
flate2 = "1.0"
vers-plugin = { path = "crates/vers-plugin" }
vers-types = { path = "crates/vers-types" }

[workspace]
members = ["crates/*"]
