# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
authors = ["Nic Patterson <nic@reynn.dev>"]
edition = "2018"
name  = "vers"
version = "0.1.0"

[dependencies]
anyhow  = "1.0"
log     = "0.4"
simplelog = "0.10"
smol    = "1.2"
structopt = "0.3"
thiserror = "1.0"
vers-core = { path="../vers-core" }
