[package]
authors = ["Nic Patterson <nic@reynn.dev>"]
edition = "2018"
name    = "vers-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait      = "0.1"
directories-next = "2.0"
lazy_static      = "1.4"
log              = "0.4"
prae             = { version = "0.4", features = ["serde"] }
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "*"
thiserror        = "1.0"
toml             = "0.5"
url              = "2.2"
walkdir          = "2.3"

[dev-dependencies]
anyhow    = "1.0"
test-case = "1.1"
