[package]
authors = ["Nic Patterson <nic@reynn.dev>"]
categories = ["command-line-utilities"]
description = "Install and manage dev tools with multiple environments"
edition = "2021"
license = "MIT"
name = "vers"
repository = "https://github.com/reynn/vers"
rust-version = "1.61"
version = "0.1.0"

[package.metadata.bundle]
identifier = "dev.reynn.vers"
name = "vers"

[dependencies]
async-trait = "0.1"
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = "1.0"
clap_complete = "3.2"
directories-next = "2.0"
env_logger = "0.9"
eyre = "0.6"
is_executable = "1.0"
log = "0.4"
octocrab = "0.16"
once_cell = "1.12"
regex = "1.5"
reqwest = "0.11"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skim = "0.9"
test-case = "2.1"
tokio = { version = "1.19", features = ["full"] }
toml = "0.5"
walkdir = "2.3"
wasmer = "2.3"
wasmer-compiler-cranelift = "2.3"
wasmer-engine-universal = "2.3"
wasmer-wasi = "2.3"
